--- a/frontend-challenge/src/App.scss
+++ b/frontend-challenge/src/App.scss
@@ -1,38 +1,19 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+}
+
+.login-form {
+  margin: 5em auto 5em auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  width: 50vw;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  & > input {
+    margin: 1em auto
   }
-  to {
-    transform: rotate(360deg);
+
+  & > button {
+    margin: 1em auto
   }
 }
