feat: story row changes background color depending on status

--- a/frontend-challenge/src/App.scss
+++ b/frontend-challenge/src/App.scss
@@ -72,3 +72,19 @@ section .col {
     background: #ff0000;
   }
 }
+
+.text-white {
+  color: #fff;
+}
+
+.bg-black {
+  background: #000;
+}
+
+.bg-red {
+  background: #ff0000;
+}
+
+.bg-green {
+  background: #008000;
+}
